update fixed 2 finall

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -24,7 +24,7 @@
     <mat-drawer #drawer class="sideNav" mode="side">
       <mat-nav-list class="menuLeft">
         <a mat-list-item routerLink="/menu"> Menu </a>
-        <a mat-list-item routerLink="/admin-panel"> Użytkownicy </a>
+        <a mat-list-item routerLink="/user-list"> Użytkownicy </a>
         <a mat-list-item [matMenuTriggerFor]="menu">Zamówienia</a>
         <a mat-list-item routerLink="/dish-list"> Dania </a>
         <a mat-list-item routerLink="/type-dish-list"> Typy dań </a>
